# web3store

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
auth/: Cargo.toml  Dockerfile
auth/src/: create_customer.rs  create_vendor.rs  login.rs  main.rs  refresh_token.rs
auth/src/kafka/: kafka_producer.rs
auth/src/keycloak/: keycloak_ex.rs  keycloak_factory.rs  mod.rs
auth/src/utils/: env.rs  logging.rs
customers/: Cargo.toml  Dockerfile  init.sql  postgres.Dockerfile
customers/src/: create_customer_topic.rs  db_factory.rs  main.rs
customers/src/entity/: customer.rs
customers/src/migrations/: m20250331_0001_create_customers_table.rs  migrator.rs  mod.rs
goods/: Cargo.toml  Dockerfile
goods/src/: main.rs
proxy/: Dockerfile  nginx.conf
src/: create_customer.rs  login.rs  main.rs  refresh_token.rs
src/keycloak/: authorization.rs  credentials.rs  host.rs  keycloak_ex.rs  keycloak_factory.rs  management.rs  mod.rs  routes.rs  seeding.rs  watcher.rs
src/keycloak/queries/: clients.rs  mod.rs  role.rs
src/keycloak/requests/: assign_roles.rs
src/keycloak/responses/: client.rs  mod.rs  role.rs  user.rs
src/keycloak/services/: authorization.rs  authorization_implementation.rs  credentials.rs  credentials_implementation.rs  (+8 more)
src/utils/: async_ex.rs  errors.rs  http.rs  mod.rs
ui/: index.html  package.json
ui/src/: index.css  main.tsx
utils/: Cargo.toml
utils/src/: dotenv.rs  errors.rs  http.rs  kafka_consumer.rs  lib.rs
vendors/: Cargo.toml  Dockerfile  init.sql  postgres.Dockerfile
vendors/src/: create_vendor_topic.rs  main.rs
(+46 files in other folders)
